force-app/main/default/objects/TwitterApp__mdt/TwitterApp__mdt.object-meta.xml
<CustomObject>
    <label>TwitterApp</label>
    <pluralLabel>TwitterApps</pluralLabel>
</CustomObject>