force-app/main/default/objects/TwitterApp__mdt/fields/AccessToken__c.field-meta.xml
<CustomField>
    <fullName>AccessToken__c</fullName>
    <label>AccessToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>