force-app/main/default/objects/TwitterApp__mdt/fields/APISecret__c.field-meta.xml
<CustomField>
    <fullName>APISecret__c</fullName>
    <label>APISecret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>