force-app/main/default/objects/TwitterApp__mdt/fields/TokenSecret__c.field-meta.xml
<CustomField>
    <fullName>TokenSecret__c</fullName>
    <label>TokenSecret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>